refactorings and cleanups.
- use Eric Meyer's Reset CSS v2.0.
- removed wrapper elements.
- only use <article> for news posts.
- tweaked styles.

--- a/_includes/member.html
+++ b/_includes/member.html
@@ -5,6 +5,6 @@
     </div>
     <div class="column right">
         <h4 class="role">{{ member.role }}</h4>
-        <article class="bio">{{ member.bio | markdownify }}</article>
+        <div class="bio">{{ member.bio | markdownify }}</div>
     </div>
 </div>
