--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,7 @@
                     </div>
                 </div>
                 <div class="copyright">
-                    <p>Made with care&mdash;Released under the <a href="http://en.wikipedia.org/wiki/MIT_License">MIT license</a>
+                    <p>Made with care &bull; Released under the <a href="http://en.wikipedia.org/wiki/MIT_License">MIT license</a>
                     <br>
                     &copy; 2010-2015 The appleseedhq Organization</p>
                 </div>
