--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -63,7 +63,7 @@
         <div class="content">
             {% for post in site.posts limit:1 %}
                 <article>
-                    <h2>{{ post.title }}</h2>
+                    <h2 id="latest-news">{{ post.title }}</h2>
                     <div class="date">{{ post.date | date: "%B %-d, %Y" }}</div>
                     {{ post.content }}
                 </article>
