--- a/css/styles.css
+++ b/css/styles.css
@@ -245,12 +245,7 @@ iframe
 {
     width: 100%;
     z-index: 100;
-}
-
-.section.navigation .content
-{
-    padding-top: 0px;
-    padding-bottom: 0px;
+    transition: 320ms;
 }
 
 .section.navigation.sticky
@@ -258,6 +253,12 @@ iframe
     position: fixed;
     top: 0px;
     background-color: #1a1a1a;
+}
+
+.section.navigation .content
+{
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
 
 .section.navigation.sticky + .section
