--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
     <head>
         <meta charset="utf-8">
         <title>appleseed - {{ page.title }}</title>
-        <meta name="description" content="appleseed is a modern, open source rendering engine designed to produce photorealistic images, animations and visual effects." />
+        <meta name="description" content="appleseed is a modern, open source, physically-based rendering engine designed to produce photorealistic images, animations and visual effects." />
         <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico" />
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans%7CInconsolata">
         <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
