--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>appleseed - {{ page.title }}</title>
         <meta name="description" content="appleseed is a modern, open source, physically-based rendering engine designed to produce photorealistic images, animations and visual effects." />
+        <meta name="google-site-verification" content="r1TFSRu5lmeTvLyLBW_2AP-quCnivVxpG4CtM10etgc" />
         <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico" />
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans%7CInconsolata">
         <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
