--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,9 +9,12 @@
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans%7CInconsolata">
         <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="/css/styles.css">
-        <link rel="stylesheet" type="text/css" href="/css/lightbox.css" />
+        <link rel="stylesheet" type="text/css" href="/css/lightbox.css">
+        <link rel="stylesheet" type="text/css" href="/css/photobox.css">
         <script src="/js/jquery-1.11.0.min.js"></script>
         <script src="/js/lightbox.min.js"></script>
+        <script src="/js/jquery.photobox.js"></script>
+        <script src="/js/packery.pkgd.min.js"></script>
     </head>
     <body>
         <!-- ====================
