--- a/css/styles.css
+++ b/css/styles.css
@@ -215,6 +215,23 @@ th, tfoot td
     font-size: 18px;
 }
 
+::-webkit-scrollbar,
+::-webkit-scrollbar-track,
+::-webkit-scrollbar-thumb
+{
+    width: 12px;
+}
+
+::-webkit-scrollbar-track
+{
+    background-color: #222;
+}
+
+::-webkit-scrollbar-thumb
+{
+    background-color: #444;
+}
+
 /* ====================
  * Sections.
  * ==================== */
