fixed broken link.

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -39,7 +39,7 @@
                         </script>
                     {% endfor %}
                 </div>
-                <a class="button get-started" href="/docs/gettingstarted.html">Get Started</a>
+                <a class="button get-started" href="/docs/tutorials/gettingstarted.html">Get Started</a>
             </div>
         </div>
     </div>
