fixed minor typo.

--- a/_layouts/features.html
+++ b/_layouts/features.html
@@ -20,7 +20,7 @@
                         <div class="block">
                             <h3>Rendering Modes</h3>
                             <ul>
-                                <li>Multipass rendering</li>
+                                <li>Multi-pass rendering</li>
                                 <li>Progressive rendering</li>
                                 <li>Interactive rendering</li>
                                 <li>Scene editing during rendering</li>
