added appleseed.studio lookdev video to home page.

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -71,4 +71,15 @@
         </div>
     </div>
 
+    <!-- ====================
+         Showcase section.
+         ==================== -->
+
+    <div class="section dark showcase">
+        <div class="content">
+            <iframe src="//player.vimeo.com/video/127622613?title=0&amp;byline=0&amp;portrait=0&amp;color=ff6600" width="768" height="432" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <p class="legend">In this video, we create a material from scratch and assign it to pieces of a 72 million triangles model, within appleseed.studio, appleseed's standalone lookdev application.</p>
+        </div>
+    </div>
+
 {% include footer.html %}
