on Windows, 1.2.0-beta now comes in two flavors (SSE 2 and SSE 4.2).

--- a/css/styles.css
+++ b/css/styles.css
@@ -554,6 +554,8 @@ th, tfoot td
 {
     display: inline-block;
     margin-bottom: 20px;
+    vertical-align: top;
+    font-size: 14px;
 }
 
 .section.download .build:not(:hover)
