Add news history

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -68,6 +68,9 @@
                     {{ post.content }}
                 </article>
             {% endfor %}
+            <div id="older-news">
+                <a href="/news.html">Older News&hellip;</a>
+            </div>
         </div>
     </div>
 
