--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
-/* ====================
+/* ========================================================================
  * Eric Meyer's Reset CSS v2.0 (http://meyerweb.com/eric/tools/css/reset/)
  * http://cssreset.com
  * Our tweaks:
  *  - Removed <ul> and <ol> list style resets.
- * ==================== */
+ * ======================================================================== */
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -57,9 +57,9 @@ table
     border-spacing: 0;
 }
 
-/* ====================
+/* ========================================================================
  * Common styles.
- * ==================== */
+ * ======================================================================== */
 
 body
 {
@@ -237,9 +237,9 @@ th, tfoot td
     background-color: #444;
 }
 
-/* ====================
+/* ========================================================================
  * Sections.
- * ==================== */
+ * ======================================================================== */
 
 .section.light
 {
@@ -261,9 +261,9 @@ th, tfoot td
     color: #ccc;
 }
 
-/* ====================
+/* ========================================================================
  * Logo section.
- * ==================== */
+ * ======================================================================== */
 
 .section.logo .content
 {
@@ -277,9 +277,9 @@ th, tfoot td
     display: inline-block;
 }
 
-/* ====================
+/* ========================================================================
  * Navigation section.
- * ==================== */
+ * ======================================================================== */
 
 .section.navigation
 {
@@ -365,9 +365,9 @@ th, tfoot td
     border-top-color: transparent;
 }
 
-/* ====================
+/* ========================================================================
  * Intro section.
- * ==================== */
+ * ======================================================================== */
 
 .section.intro .content
 {
@@ -393,9 +393,9 @@ th, tfoot td
     color: inherit;
 }
 
-/* ====================
+/* ========================================================================
  * Quick section.
- * ==================== */
+ * ======================================================================== */
 
 .section.quick .content
 {
@@ -435,9 +435,9 @@ th, tfoot td
     vertical-align: top;
 }
 
-/* ====================
+/* ========================================================================
  * Showcase section.
- * ==================== */
+ * ======================================================================== */
 
 .section.showcase .content
 {
@@ -449,9 +449,9 @@ th, tfoot td
     text-align: center;
 }
 
-/* ====================
+/* ========================================================================
  * News section.
- * ==================== */
+ * ======================================================================== */
 
 .section.news article
 {
@@ -477,9 +477,9 @@ th, tfoot td
     padding-bottom: 15px;
 }
 
-/* ====================
+/* ========================================================================
  * Features section.
- * ==================== */
+ * ======================================================================== */
 
 .section.features .group
 {
@@ -540,9 +540,9 @@ th, tfoot td
     margin-bottom: 10px;
 }
 
-/* ====================
+/* ========================================================================
  * Gallery.
- * ==================== */
+ * ======================================================================== */
 
 .section.gallery .collection
 {
@@ -555,9 +555,9 @@ th, tfoot td
     box-shadow: 0px 0px 20px 5px #252525;
 }
 
-/* ====================
+/* ========================================================================
  * Download section.
- * ==================== */
+ * ======================================================================== */
 
 .section.download .builds
 {
@@ -625,9 +625,9 @@ th, tfoot td
     -webkit-filter: initial;
 }
 
-/* ====================
+/* ========================================================================
  * Docs section.
- * ==================== */
+ * ======================================================================== */
 
 .section.docs .tutorials
 {
@@ -690,9 +690,9 @@ th, tfoot td
     box-shadow: 0px 0px 20px 5px #252525;
 }
 
-/* ====================
+/* ========================================================================
  * Team section.
- * ==================== */
+ * ======================================================================== */
 
 .section.team .group:not(:last-child)
 {
@@ -731,9 +731,9 @@ th, tfoot td
     margin-top: 2px;
 }
 
-/* ====================
+/* ========================================================================
  * Statistics.
- * ==================== */
+ * ======================================================================== */
 
 .section.stats .release
 {
@@ -757,9 +757,9 @@ th, tfoot td
     text-align: right;
 }
 
-/* ====================
+/* ========================================================================
  * Footer section.
- * ==================== */
+ * ======================================================================== */
 
 .section.footer .columns-wrapper
 {
