Updated features for 1.4.0 beta

--- a/_layouts/features.html
+++ b/_layouts/features.html
@@ -44,15 +44,19 @@
                             <h3>Reflection Models</h3>
                             <ul>
                                 <li>Lambertian BRDF (purely diffuse)</li>
+                                <li>Oren-Nayar Microfacet BRDF</li>
+                                <li>Sheen BRDF</li>
                                 <li>Specular BRDF (perfect mirror)</li>
                                 <li>Specular BTDF (clear glass)</li>
-                                <li>Oren-Nayar Microfacet BRDF</li>
                                 <li>Ward Microfacet BRDF</li>
                                 <li>Blinn Microfacet BRDF</li>
                                 <li>GGX Microfacet BRDF</li>
                                 <li>Microfacet BTDF (rough glass)</li>
                                 <li>Anisotropic Ashikhmin-Shirley BRDF</li>
                                 <li>Kelemen BRDF</li>
+                                <li>Glossy BRDF</li>
+                                <li>Metal BRDF</li>
+                                <li>Glass BSDF</li>
                                 <li>Disney's Layered BRDF</li>
                                 <li>Velvet BRDF</li>
                                 <li>Arbitrary mixture of BRDFs</li>
@@ -129,6 +133,7 @@
                                 <li>Ray bias</li>
                                 <li>Light Near Start</li>
                                 <li>Max Ray Intensity</li>
+                                <li>Nested Dielectrics</li>
                                 <li>Dozens of diagnostic modes</li>
                             </ul>
                         </div>
