Tweak feature list

--- a/_layouts/features.html
+++ b/_layouts/features.html
@@ -55,9 +55,9 @@
                                 <li>Anisotropic Ashikhmin-Shirley BRDF</li>
                                 <li>Kelemen BRDF</li>
                                 <li>Glossy BRDF</li>
-                                <li>Metal BRDF</li>
-                                <li>Glass BSDF</li>
-                                <li>Disney's Layered BRDF</li>
+                                <li>Advanced metal BRDF</li>
+                                <li>Advanced glass BSDF</li>
+                                <li>Disney's layered BRDF</li>
                                 <li>Velvet BRDF</li>
                                 <li>Arbitrary mixture of BRDFs</li>
                             </ul>
